tests/compiler/errors/const_reassign.casa
# expect: SYNTAX
const MAX 100
50 = MAX
